// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WebViewScreen Instances FAQ matches snapshot 1`] = `
<iframe
  allowFullScreen={true}
  frameBorder="0"
  height="100%"
  onLoad={[Function]}
  seamless={true}
  src="https://community.gooddollar.org/faq"
  style={
    Object {
      "height": 768,
    }
  }
  title="FAQ"
  width="100%"
/>
`;

exports[`WebViewScreen Instances PrivacyPolicy matches snapshot 1`] = `
<iframe
  allowFullScreen={true}
  frameBorder="0"
  height="100%"
  onLoad={[Function]}
  seamless={true}
  src="https://www.gooddollar.org/privacy-policy/?gd-frame=1"
  style={
    Object {
      "height": 768,
    }
  }
  title="Privacy Policy"
  width="100%"
/>
`;

exports[`WebViewScreen Instances PrivacyPolicyAndTerms matches snapshot 1`] = `
<iframe
  allowFullScreen={true}
  frameBorder="0"
  height="100%"
  onLoad={[Function]}
  seamless={true}
  src="https://community.gooddollar.org/tou1/"
  style={
    Object {
      "height": 768,
    }
  }
  title="Privacy Policy & Terms"
  width="100%"
/>
`;

exports[`WebViewScreen Instances Support matches snapshot 1`] = `
<iframe
  allowFullScreen={true}
  frameBorder="0"
  height="100%"
  onLoad={[Function]}
  seamless={true}
  src="https://help.gooddollar.org"
  style={
    Object {
      "height": 768,
    }
  }
  title=" Help & Feedback"
  width="100%"
/>
`;

exports[`WebViewScreen Instances SupportForUnsigned matches snapshot 1`] = `
<iframe
  allowFullScreen={true}
  frameBorder="0"
  height="100%"
  onLoad={[Function]}
  seamless={true}
  src="https://help.gooddollar.org"
  style={
    Object {
      "height": 768,
    }
  }
  title=" Help & Feedback"
  width="100%"
/>
`;

exports[`WebViewScreen Instances TermsOFUse matches snapshot 1`] = `
<iframe
  allowFullScreen={true}
  frameBorder="0"
  height="100%"
  onLoad={[Function]}
  seamless={true}
  src="https://www.gooddollar.org/terms-conditions/?gd-frame=1"
  style={
    Object {
      "height": 768,
    }
  }
  title="Terms Of Use"
  width="100%"
/>
`;

exports[`WebViewScreen matches snapshot 1`] = `
<iframe
  allowFullScreen={true}
  allowpaymentrequest="true"
  frameBorder="0"
  seamless={true}
  src="sourceUrl"
  style={
    Object {
      "WebkitBoxFlex": 1,
      "WebkitFlexBasis": "0%",
      "WebkitFlexGrow": 1,
      "WebkitFlexShrink": 1,
      "borderBottomWidth": "0px",
      "borderLeftWidth": "0px",
      "borderRightWidth": "0px",
      "borderTopWidth": "0px",
      "flexBasis": "0%",
      "flexGrow": 1,
      "flexShrink": 1,
      "height": "100%",
      "msFlexNegative": 1,
      "msFlexPositive": 1,
      "msFlexPreferredSize": "0%",
      "overflowX": "hidden",
      "overflowY": "hidden",
      "width": "100%",
    }
  }
/>
`;

exports[`WebViewScreen matches snapshot 2`] = `
<iframe
  allowFullScreen={true}
  allowpaymentrequest="true"
  frameBorder="0"
  seamless={true}
  src="https://community.gooddollar.org/terms/"
  style={
    Object {
      "WebkitBoxFlex": 1,
      "WebkitFlexBasis": "0%",
      "WebkitFlexGrow": 1,
      "WebkitFlexShrink": 1,
      "borderBottomWidth": "0px",
      "borderLeftWidth": "0px",
      "borderRightWidth": "0px",
      "borderTopWidth": "0px",
      "flexBasis": "0%",
      "flexGrow": 1,
      "flexShrink": 1,
      "height": "100%",
      "msFlexNegative": 1,
      "msFlexPositive": 1,
      "msFlexPreferredSize": "0%",
      "overflowX": "hidden",
      "overflowY": "hidden",
      "width": "100%",
    }
  }
/>
`;
